# comgraph

./: .gitignore  README.md
c++/: CMakeLists.txt  README.md  todo.md
c++/lib_cybase/: cyPoint.h  cyTriMesh.h
c++/lib_lodepng/: CMakeLists.txt
c++/lib_tinyxml2/: CMakeLists.txt
c++/scenes/: boxlyd.xml  bugged.xml  cena.xml  cena2.xml  cena_material.xml  cena_teste.xml  circlyd.xml  materials.xml  objects.xml  prj2_ortographic.xml  prj2_perspective.xml  prj3_1.xml  prj4_persp.xml  prj5.xml  prj6.xml  prj6_mirror.xml  prj7_cube.xml  prj7_discord.xml  prj7_teapot.xml  prj7_three_spheres.xml  scene01.xml  scene02.xml
c++/src/: CMakeLists.txt
c++/src/cameras/: camera.hpp  look_at.cpp  look_at.hpp  orthographic.cpp  orthographic.hpp  perspective.cpp  perspective.hpp
c++/src/core/: app.cpp  app.hpp  background.cpp  background.hpp  builder.cpp  builder.hpp  common.hpp  converters.cpp  converters.hpp  film.cpp  film.hpp  image_io.cpp  image_io.hpp  main.cpp  paramset.hpp  ray.cpp  ray.hpp  scene.hpp
c++/src/integrators/: blinnphong_integrator.cpp  integrators.hpp  raycast_integrator.cpp
c++/src/light/: ambient_light.cpp  directional_light.cpp  lights.hpp  point_light.cpp  spot_light.cpp  visibility_tester.cpp  visibility_tester.hpp
c++/src/math/: geometry.cpp  geometry.hpp  math_operators.hpp
c++/src/msg_system/: error.cpp  error.hpp  tcolor.hpp
c++/src/primitive/: box.cpp  flatmaterial.hpp  material.cpp  material.hpp  plane.cpp  primitive.cpp  primitive.hpp  shape.hpp  sphere.cpp  surfel.cpp  surfel.hpp  triangle.cpp
